--- a/style/index.css
+++ b/style/index.css
@@ -5,3 +5,32 @@ body {
     font-family: "Quicksand", serif;
 
 }
+
+header {
+    background-color: #fff4e7;
+    padding: 50px 240px;
+}
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
+}
+
+nav > ul {
+    display: flex;
+}
+
+nav li {
+    font-size: 1rem;
+    font-weight: 500;
+    margin-right: 30px;
+    list-style: none;
+}
+
+.nav-tittle {
+    font-size: 2.8rem;
+    font-weight: 700;
+    color: #131313;
+}
