--- a/style/index.css
+++ b/style/index.css
@@ -2,6 +2,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
 /* share style */
+
+* {
+    margin: 0;
+    padding: 0;
+}
 body {
     font-family: "Quicksand", serif;
 
@@ -42,8 +47,8 @@ nav > ul {
 nav li {
     font-size: 1rem;
     font-weight: 500;
-    margin-left: 30px;
     list-style: none;
+   
 }
 
 .nav-tittle {
@@ -93,14 +98,32 @@ nav li {
 
     nav {
         flex-direction: column;
-        
-    }
-    nav li {
-        
+        gap: 20px;
     }
 
     .banner {
         padding-left: 20px;
         padding-right: 20px;
     }
+}
+
+/* for teblet and mid-width */
+
+@media screen and (min-width:576px) and (max-width:960px) {
+    header {
+        padding: 20px 30px;
+        
+    }
+
+    nav {
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .banner {
+        padding-left: 40px;
+        padding-right: 40px;
+       
+    }
+    
 }
