--- a/style/index.css
+++ b/style/index.css
@@ -161,6 +161,30 @@ main {
         padding-left: 20px;
         padding-right: 20px;
     }
+
+    /* feature */
+
+    .features {
+        flex-direction: column-reverse;
+        gap: 50px
+    }
+
+    .feature-img {
+        grid-template-columns: 1fr;
+    }
+
+    main {
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+
+    .features div {
+        width: 100%;
+}
+
+.f-pic {
+    width: 80%;
+}
 }
 
 /* for teblet and mid-width */
@@ -181,5 +205,30 @@ main {
         padding-right: 40px;
        
     }
+
+       /* feature */
+
+       .features {
+        flex-direction: column-reverse;
+        gap: 50px;
+    }
+
+    .feature-img {
+        grid-template-columns: repeat(2, 1fr);
+
+    }
+
+    main {
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+
+    .features div {
+        width: 100%;
+}
+
+.f-pic {
+    width: 80%;
+}
     
 }
