--- a/style/index.css
+++ b/style/index.css
@@ -208,6 +208,34 @@ main {
 .ten-year-badge p {
     font-size: 1.2rem;
 }
+
+/* fact style */
+
+.fact h3 {
+    font-size: 2.8rem;
+    color: #131313;
+}
+
+.fact-des {
+    font-size: 1.2rem;
+    color: #727272;
+    margin-top: 20px;
+}
+
+.fact-items {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 80px;
+}
+
+.fact-item{
+   
+    border: #FF900E solid 3px;
+    border-radius: 8px;
+    padding: 25px 20px;
+    text-align: center;
+}
+
 /* responsive style */
 
 @media screen and (max-width: 576px) {
@@ -273,6 +301,14 @@ main {
         font-size: 3rem;
     }
 
+    /* fact */
+
+    .fact-items {
+       flex-direction: column;
+       gap: 15px;
+       width: 60%;
+       
+    }
 }
 
 /* for teblet and mid-width */
@@ -341,5 +377,12 @@ main {
 .ten-year-badge h2 {
     font-size: 3rem;
 }
+
+.fact-items {
+    flex-direction: column;
+    gap: 15px;
+    width: 60%;
+    
+ }
     
 }
