--- a/style/index.css
+++ b/style/index.css
@@ -236,6 +236,42 @@ main {
     text-align: center;
 }
 
+/* contact style */
+
+/* footer style */
+
+footer {
+    padding-left: 140px;
+    padding-right: 140px;
+}
+
+.contact {
+    margin-top: 100px;
+    text-align: center;
+}
+
+.contact h3 {
+    font-size: 3rem;
+}
+
+.contact p {
+    color: #727272;
+    font-size: 1.2rem;
+    margin-top: 20px;
+}
+
+.contact-icons {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 50px;
+    align-items: center;
+
+}
+
+.contact-icon {
+    width: 120px;
+}
+
 /* responsive style */
 
 @media screen and (max-width: 576px) {
@@ -309,6 +345,25 @@ main {
        width: 60%;
        
     }
+
+    /* footer style */
+
+footer {
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+.contact-icons {
+    flex-direction: column;
+    gap: 20px;
+    width: 100%;
+   
+}
+
+.contact-icon {
+    width: 250px;
+}
+
 }
 
 /* for teblet and mid-width */
